--- a/puzzler.cfg
+++ b/puzzler.cfg
@@ -16,7 +16,8 @@ step_pin: PF13
 dir_pin: PF12
 enable_pin: !PF14
 microsteps: 16
-rotation_distance: 40
+# 28mm = 14 tooth pulley, GT2 belt
+rotation_distance: 28
 endstop_pin: !PG6
 position_endstop: 0
 position_max: 830
@@ -27,10 +28,11 @@ homing_speed: 50
 [stepper_y]
 step_pin: PG0
 dir_pin: PG1
-#enable_pin: !PF15
+enable_pin: !PF15
 microsteps: 16
-rotation_distance: 40
-endstop_pin: !PG10
+# 28mm = 14 tooth pulley, GT2 belt
+rotation_distance: 28
+endstop_pin: !PG9
 position_endstop: 0
 position_max: 1350
 homing_speed: 50
@@ -39,11 +41,13 @@ homing_speed: 50
 # second Y axis driver, aka "Y2", includes endstop
 [stepper_y1]
 step_pin: PF11
-dir_pin: PG3
+# reversed direction pin as these motors face each other
+dir_pin: !PG3
 enable_pin: !PG5
 microsteps: 16
-rotation_distance: 40
-#endstop_pin: !PG10
+# 28mm = 14 tooth pulley, GT2 belt
+rotation_distance: 28
+endstop_pin: !PG10
 #position_endstop: 0
 #position_max: 1350
 #homing_speed: 50
