--- a/puzzler.cfg
+++ b/puzzler.cfg
@@ -59,7 +59,7 @@ dir_pin: PC1
 enable_pin: !PA0
 microsteps: 16
 rotation_distance: 40
-endstop_pin: !PG11
+endstop_pin: tmc2209_stepper_z:virtual_endstop
 position_endstop: 0
 position_max: 50
 homing_speed: 50
@@ -177,7 +177,7 @@ run_current: 0.800
 
 [tmc2209 stepper_z]
 uart_pin: PC7
-#diag_pin: PG11
+diag_pin: PG11
 run_current: 0.650
 #stealthchop_threshold: 999999
 
