get Z axis working

--- a/puzzler.cfg
+++ b/puzzler.cfg
@@ -20,7 +20,7 @@ microsteps: 16
 rotation_distance: 28
 endstop_pin: !PG6
 position_endstop: 0
-position_max: 830
+position_max: 840
 homing_speed: 50
 
 # Driver1
@@ -34,7 +34,7 @@ microsteps: 16
 rotation_distance: 28
 endstop_pin: !PG9
 position_endstop: 0
-position_max: 1350
+position_max: 1300
 homing_speed: 50
 
 # Driver2
@@ -56,13 +56,22 @@ endstop_pin: !PG10
 [stepper_z]
 step_pin: PG4
 dir_pin: PC1
-enable_pin: !PA0
+# some documents say this is PA0, that's for pre-1.1 boards
+enable_pin: !PA2
 microsteps: 16
 rotation_distance: 40
 endstop_pin: tmc2209_stepper_z:virtual_endstop
 position_endstop: 0
-position_max: 50
-homing_speed: 50
+position_max: 70
+homing_speed: 20
+homing_retract_dist: 0
+
+[tmc2209 stepper_z]
+uart_pin: PC7
+diag_pin: ^PG11
+run_current: 0.650
+driver_SGTHRS: 25
+stealthchop_threshold: 999999
 
 # Driver4
 #[extruder]
@@ -150,8 +159,8 @@ restart_method: command
 kinematics: cartesian
 max_velocity: 300
 max_accel: 3000
-max_z_velocity: 5
-max_z_accel: 100
+max_z_velocity: 100
+max_z_accel: 1000
 
 ########################################
 # TMC2209 configuration
@@ -173,12 +182,6 @@ run_current: 0.800
 uart_pin: PC6
 #diag_pin: PG10
 run_current: 0.800
-#stealthchop_threshold: 999999
-
-[tmc2209 stepper_z]
-uart_pin: PC7
-diag_pin: PG11
-run_current: 0.650
 #stealthchop_threshold: 999999
 
 #[tmc2209 extruder]
