--- a/puzzler.cfg
+++ b/puzzler.cfg
@@ -9,6 +9,22 @@
 # boards use a "128KiB bootloader" and a "25Mhz crystal".
 
 # See docs/Config_Reference.md for a description of parameters.
+[force_move]
+enable_force_move=True
+
+[output_pin valve]
+# Fan5 output
+pin: PD15
+
+[output_pin pump]
+# HE1 output
+pin: PA3
+
+[fan_generic camera_lights]
+pin: PA0
+# if we want to modulate the LED intensity we'll use hardware PWM at 10KHz
+hardware_pwm: True
+cycle_time: 0.0001
 
 # Driver0
 [stepper_x]
@@ -18,10 +34,20 @@ enable_pin: !PF14
 microsteps: 16
 # 28mm = 14 tooth pulley, GT2 belt
 rotation_distance: 28
-endstop_pin: !PG6
+endstop_pin: tmc2209_stepper_x:virtual_endstop
 position_endstop: 0
-position_max: 840
+position_max: 855
 homing_speed: 50
+homing_retract_dist: 0
+
+[tmc2209 stepper_x]
+uart_pin: PC4
+diag_pin: ^PG6
+run_current: 0.800
+stealthchop_threshold: 999999
+# max sensitivity = 144 (160 failed)
+# min sensitivity = 32 (16 seemed like it bounced)
+driver_SGTHRS: 64
 
 # Driver1
 # first Y axis driver, aka "Y1", no endstop (sigh)
@@ -32,10 +58,22 @@ enable_pin: !PF15
 microsteps: 16
 # 28mm = 14 tooth pulley, GT2 belt
 rotation_distance: 28
-endstop_pin: !PG9
+endstop_pin: tmc2209_stepper_y:virtual_endstop
 position_endstop: 0
-position_max: 1300
+# formerly 1335, I cranked it down to make sure the light bracket
+# didn't get smashed into the extrusion
+position_max: 1250
 homing_speed: 50
+homing_retract_dist: 0
+
+[tmc2209 stepper_y]
+uart_pin: PD11
+diag_pin: ^PG9
+run_current: 0.800
+stealthchop_threshold: 999999
+# max sensitivity = 140 (sometimes fails to move if any higher)
+# min sensitivity < 4   (I stopped testing, as it was never bouncing off the stops)
+driver_SGTHRS: 50
 
 # Driver2
 # second Y axis driver, aka "Y2", includes endstop
@@ -47,23 +85,28 @@ enable_pin: !PG5
 microsteps: 16
 # 28mm = 14 tooth pulley, GT2 belt
 rotation_distance: 28
-endstop_pin: !PG10
-#position_endstop: 0
-#position_max: 1350
-#homing_speed: 50
+endstop_pin: tmc2209_stepper_y1:virtual_endstop
+
+[tmc2209 stepper_y1]
+uart_pin: PC6
+diag_pin: ^PG10
+run_current: 0.800
+stealthchop_threshold: 999999
+driver_SGTHRS: 50
 
 # Driver3
 [stepper_z]
 step_pin: PG4
-dir_pin: PC1
+dir_pin: !PC1
 # some documents say this is PA0, that's for pre-1.1 boards
 enable_pin: !PA2
 microsteps: 16
 rotation_distance: 40
 endstop_pin: tmc2209_stepper_z:virtual_endstop
+position_min: -70
+position_max: 0
 position_endstop: 0
-position_max: 70
-homing_speed: 20
+homing_speed: 40
 homing_retract_dist: 0
 
 [tmc2209 stepper_z]
@@ -71,6 +114,20 @@ uart_pin: PC7
 diag_pin: ^PG11
 run_current: 0.650
 driver_SGTHRS: 25
+stealthchop_threshold: 999999
+
+[manual_stepper stepper_a]
+step_pin: PF9
+dir_pin: PF10
+enable_pin: !PG2
+microsteps: 16
+rotation_distance: 200
+velocity: 200
+accel: 2000
+
+[tmc2209 manual_stepper stepper_a]
+uart_pin: PF2
+run_current: 0.100
 stealthchop_threshold: 999999
 
 # Driver4
@@ -165,29 +222,6 @@ max_z_accel: 1000
 ########################################
 # TMC2209 configuration
 ########################################
-
-[tmc2209 stepper_x]
-uart_pin: PC4
-#diag_pin: PG6
-run_current: 0.800
-#stealthchop_threshold: 999999
-
-[tmc2209 stepper_y]
-uart_pin: PD11
-#diag_pin: PG9
-run_current: 0.800
-#stealthchop_threshold: 999999
-
-[tmc2209 stepper_y1]
-uart_pin: PC6
-#diag_pin: PG10
-run_current: 0.800
-#stealthchop_threshold: 999999
-
-#[tmc2209 extruder]
-#uart_pin: PF2
-#run_current: 0.800
-#stealthchop_threshold: 999999
 
 #[tmc2209 extruder1]
 #uart_pin: PE4
