move lights to an output_pin instead of a fan_generic

--- a/puzzler.cfg
+++ b/puzzler.cfg
@@ -20,11 +20,9 @@ pin: PD15
 # HE1 output
 pin: PA3
 
-[fan_generic camera_lights]
+[output_pin lights]
+# HE0 output
 pin: PA0
-# if we want to modulate the LED intensity we'll use hardware PWM at 10KHz
-hardware_pwm: True
-cycle_time: 0.0001
 
 # Driver0
 [stepper_x]
